--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.2",
     "react-content-loader": "^6.2.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
