--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-csv": "^2.2.2",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.10.3",
