--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "recharts": "^2.10.3",
     "swr": "^2.2.4",
     "web-vitals": "^2.1.4",
