--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.4.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.5",
+    "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.2",
