--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/print": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,10 +26,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-owl-carousel": "^2.3.3",
+    "react-pdf": "^9.1.0",
+    "react-player": "^2.16.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-use-downloader": "^1.2.8",
     "recharts": "^2.10.3",
     "swr": "^2.2.4",
     "web-vitals": "^2.1.4",
