--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "classnames": "^2.4.0",
+    "dotenv-webpack": "^8.1.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "html2pdf.js": "^0.10.1",
+    "image-webpack-loader": "^8.1.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.2",
@@ -36,6 +39,7 @@
     "react-use-downloader": "^1.2.8",
     "recharts": "^2.10.3",
     "swr": "^2.2.4",
+    "terser-webpack-plugin": "^5.3.10",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^1.3.3"
