--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv-webpack": "^8.1.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.17",
     "html2pdf.js": "^0.10.1",
     "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.9.0",
