--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-pdf-viewer/print": "^3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
     "@react-pdf/renderer": "^3.4.4",
+    "@stripe/react-stripe-js": "^3.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
